app/assets/stylesheets/traveler.scss
body[data-controller="traveler"] {

$n-per-page: 100;
$n-cols: 5;

$f-size: 16px;
$f-margin: 14px;
$f-space: $f-size + $f-margin;

$container-width: 640px;
$left-width: $n-cols * $f-space;
$right-width: $container-width - $left-width;


@mixin clearfix {
  &:after {
    content: "";
    display: table;
    clear: both;
  }
}


background: white;

.container {
  background: none;
  margin: 75px auto;
  width: $container-width;
  padding: 0;
  @include clearfix();
}

.the-trail {
  float: left;
  width: $left-width;
  @include clearfix();
}

.the-traveler {
  width: 12px;
  height: 18px;
  position: relative;
  left: 2px;
  bottom: 1px;
  opacity: 0.8;
  transition: transform 0.25s ease-in-out;
  margin-bottom: 25px;
}

.favicons {
  position: relative;
}

.favicon-sheet {
  height: $n-per-page / $n-cols * $f-space;
  transition: opacity 0.25s ease;

  &.illusion {
    background: white;
    position: absolute;
    transition: transform 0.25s ease;
    z-index: 1;
    left: 0;
    top: 0;

    &.anim {
      transform: translate3d(0, 30px, 0);
    }

  }

}

.favicon {
  float: left;
  width: $f-size;
  height: $f-size;
  margin-right: $f-margin;
  margin-bottom: $f-margin;
}

.favicon {
  transition: opacity 0.75s ease, transform 0.3s ease;
  transform: translate3d(0,0,0) scale3d(1,1,1);

  &.invisible {
    opacity: 0;
    transform: translate3d(0,-35px,0) scale3d(0.1,0.1,1);
  }

  @for $i from 0 through 9 {

    &.delay-#{$i} {
      transition-delay: 0.2s * $i + 0.2s;
    }

  }

}

.favicon-row {
  height: $f-space;
  transition: opacity 0.15s ease;
  @include clearfix();

  &.invisible {
    opacity: 0;
  }

  &.left .favicon {
    float: left;
  }

  &.right .favicon {
    float: right;
  }

}


// Fades the bottom of the trail towards nothingness
//
.favicon-fader {
  height: 0;
  pointer-events: none;
  position: relative;
  top: -$f-space;
  z-index: 10;

  $fader-height: 5 * $f-space;

  .favicon-fade {
    position: absolute;
    // background: rgba(255,255,255,0.5);
    background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,0.5));

    &.rect {
      width: $f-size;
      height: $f-space;
    }

    &.entrance {
      width: 100%;
      height: $f-margin;
      top: -$fader-height + $f-size;
      background: linear-gradient(to bottom, rgba(255,255,255,0.1), rgba(255,255,255,0.5));
    }

    &.block {
      width: 100%;
      height: $fader-height;
      top: -$fader-height + $f-space;
      background: linear-gradient(to top, rgba(255,255,255,0.99), rgba(255,255,255,0.5));
    }

    &.left {
      left: 0;
    }

    &.right {
      right: 0;
    }

    &.top {
      top: -$fader-height - $f-margin;
    }

    &.bottom {
      top: 0;
    }

  }

}


// Ghosts under the faded favicons
//
.favicon-trail {
  position: relative;
  z-index: 10;

  .favicon-ghost {
    background: #fff;

    &.lighter {
      background: #fdfdfd;
    }

  }

}


// Right column with text/status/etc.

.description {
  float: left;
  margin-top: 45px;
  padding-left: 60px;
  width: $right-width;
  color: #111;

  .title {
    font-size: 26px;
    margin-bottom: 36px;
  }

  .status-icon {
    display: inline-block;
    border-radius: 99px;
    width: 10px;
    height: 10px;
    position: relative;
    top: -2px;
    left: 12px;

    &.active {
      background: #00DC00;
    }

    &.resting {
      background: #FFD91C;
    }

    &.inactive {
      background: #DCDCDC;
    }

  }

  .intro {
    opacity: 0.75;
    font-size: 20px;
    line-height: 34px;
  }

  .neighborhood {
    color: #828CFF;
    font-size: 16px;
    line-height: 26px;
    -webkit-font-smoothing: antialiased;
    margin-top: 40px;
    transition: opacity 1.2s ease 3s;

    &.invisible {
      opacity: 0;
    }

  }

}

@media screen and (max-width: 768px) {

  .container {
    width: 410px;
    padding: 0 25px;
    margin: 50px auto;
  }

  .description {
    width: auto;
  }

}

@media screen and (max-width: 640px) {

  .container {
    width: 385px;
    padding: 0 25px;
    margin: 50px auto;
  }

  .description {
    padding-left: 35px;
    width: auto;
  }

}

}

